// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Chat snapshot (after typing) > renders the input with typed text 1`] = `
" lumen · gpt-4o-mini · 0 tools · session (new)

 Ask me anything. Slash commands: /clear, /exit, /quit. Up/Down for history.

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │ > hello lumen                                                                                  │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Chat snapshot (idle state) > renders the idle prompt 1`] = `
" lumen · gpt-4o-mini · 0 tools · session (new)

 Ask me anything. Slash commands: /clear, /exit, /quit. Up/Down for history.

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │ > Type a message and press Enter (Ctrl+C to cancel / exit)                                     │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
